<resources>
    <string name="app_name">Pest Library</string>
    <string name="title_activity_main">Project SARAi</string>
    <string name="browse_activity_main">Browse Pests</string>
    <string name="browse_activity_main2">Browse Diseases</string>
    <string name="action_settings">About Us</string>
    <string name="title_rice_bar">Rice</string>
    <string name="title_corn_bar">Corn</string>
    <string name="title_banana_bar">Banana</string>
    <string name="title_cacao_bar">Cacao</string>
    <string name="title_coffee_bar">Coffee</string>
    <string name="title_coco_bar">Coconut</string>
    <string name="view_more">View More</string>
    <string name="title_activity_rice">Rice Pests</string>
    <string name="title_activity_rice2">Rice Diseases</string>
    <string name="title_activity_corn">Corn Pests</string>
    <string name="title_activity_corn2">Corn Diseases</string>
    <string name="title_activity_banana">Banana Pests</string>
    <string name="title_activity_banana2">Banana Diseases</string>
    <string name="title_activity_cacao">Cacao Pests</string>
    <string name="title_activity_cacao2">Cacao Diseases</string>
    <string name="title_activity_coffee">Coffee Pests</string>
    <string name="title_activity_coffee2">Coffee Diseases</string>
    <string name="title_activity_coco">Coconut Pests</string>
    <string name="title_activity_coco2">Coconut Diseases</string>
    <string name="title_activity_no_data">No Data</string>
    <string name="title_item">Information</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="about_link">See more at: <a href="http://sarai.ph/about-us">http://sarai.ph/about-us</a></string>
    <string-array name="BlackArmywormadult">
        <item>Black Armyworm adult</item>
        <item>African Armyworm, Black Armyworm, Nutgrass Armyworm, True Armyworm, Hail Worm, Mystery Armyworm, Rain Worm</item>
        <item>Harabas</item>
        <item>Spodoptera exempta (Walker)/Mythimna separata Walker/Spodoptera mauritia Boisduval</item>
        <item>Gross feeding damage to foliage, growing points, and young stems. Severe infestation results in total defoliation or destruction of the plant to ground level. Eggs: Pale-yellowish and becomes dark brown just before hatching. The black head-capsules of the larvae can be seen through the shells. Each egg is about 0.5 mm in diameter, conical with a slightly rounded apex and a densely sculpted surface; Larvae: Develops from grey-green with white-yellow stripes down its back when small, to black with thin blue lines down the middle of the back and yellow-green lines outside the blue lines when fully grown. It measures 2 to 3cm long, has a velvety-black upper surface with pale lateral lines, a green or yellow ventral surface, and no hairs on the body. There are three parallel lines on the dorsal surface of the prothoracic (first body) segment and a stripe running longitudinally down the mid-dorsal surface of the body is always paler than the black pigmentation on either side of it. The head is always shiny-black; Pupa: Mahogany-brown, 10-14mm long, with a smooth, shiny surface; Adult: It is 14-18mm long and has a 29-32mm wing span. The abdomen is covered with pale grey-brown scales (except for the tip in the female which has black hair-scales). Forewings are dark-brown with distinctive grey-black markings. Hindwings are white with dark veins.</item>
        <item>Many animals, birds and insects prey on the African armyworm at different stages of its life cycle. These natural enemies should be encouraged by maintaining natural surroundings with plenty of breeding places for them, including trees and shrubs. Night birds and bats feed on the African armyworm moths, and lacewings, wasps, parasitic wasps and spiders eat the caterpillars; Avoid burning and overgrazing of grasslands which are the natural habitat and food store of the caterpillars. Burning often causes outbreaks because as soon as temperatures rise, eggs are laid in large quantities on the fresh new grass.</item>
    </string-array>
    <string-array name="BlackArmywormlarva">
        <item>Black Armyworm larva</item>
        <item>African Armyworm, Black Armyworm, Nutgrass Armyworm, True Armyworm, Hail Worm, Mystery Armyworm, Rain Worm</item>
        <item>Harabas</item>
        <item>Spodoptera exempta (Walker)/Mythimna separata Walker/Spodoptera mauritia Boisduval</item>
        <item>Gross feeding damage to foliage, growing points, and young stems. Severe infestation results in total defoliation or destruction of the plant to ground level. Eggs: Pale-yellowish and becomes dark brown just before hatching. The black head-capsules of the larvae can be seen through the shells. Each egg is about 0.5 mm in diameter, conical with a slightly rounded apex and a densely sculpted surface; Larvae: Develops from grey-green with white-yellow stripes down its back when small, to black with thin blue lines down the middle of the back and yellow-green lines outside the blue lines when fully grown. It measures 2 to 3cm long, has a velvety-black upper surface with pale lateral lines, a green or yellow ventral surface, and no hairs on the body. There are three parallel lines on the dorsal surface of the prothoracic (first body) segment and a stripe running longitudinally down the mid-dorsal surface of the body is always paler than the black pigmentation on either side of it. The head is always shiny-black; Pupa: Mahogany-brown, 10-14mm long, with a smooth, shiny surface; Adult: It is 14-18mm long and has a 29-32mm wing span. The abdomen is covered with pale grey-brown scales (except for the tip in the female which has black hair-scales). Forewings are dark-brown with distinctive grey-black markings. Hindwings are white with dark veins.</item>
        <item>Many animals, birds and insects prey on the African armyworm at different stages of its life cycle. These natural enemies should be encouraged by maintaining natural surroundings with plenty of breeding places for them, including trees and shrubs. Night birds and bats feed on the African armyworm moths, and lacewings, wasps, parasitic wasps and spiders eat the caterpillars; Avoid burning and overgrazing of grasslands which are the natural habitat and food store of the caterpillars. Burning often causes outbreaks because as soon as temperatures rise, eggs are laid in large quantities on the fresh new grass.</item>
    </string-array>
    <string-array name="CommonCutwormadult">
        <item>Common Cutworm adult</item>
        <item>Common Cutworm, Grass Cutworm, Vegetable Cutworm, Tobacco Cutworm, Tobacco Caterpillar, Taro Caterpillar</item>
        <item></item>
        <item>Spodoptera litura (Fabricius)</item>
        <item>Egg: Laid in clusters covered with short yellowish brown hairs from the abdominal tips of the female moths. Each egg is pearly white, round, and has a ridged surface; Larva: Brown or green with longitudinal stripes, with black spots ringing the body about one-fourth of the body length behind the head; Adult: Has 15-20mm long grey-brown body, and a wingspan of 30-38mm. The forewings are grey to reddish-brown with a strongly variegated pattern and paler lines along the veins, and the hindwings are greyish-white with grey margins.</item>
        <item>Seedbeds should be established far from large areas of weeds, remove weeds from areas outside of fields, and plow all uncultivated land. In insecticides, sprays are more effective than granules. High dosages are required to kill large armyworm and cutworm larvae. Spraying should be done late in the afternoon before the larvae leave their resting places to climb up the plants. Because damage is normally concentrated in discrete areas of a rice field, only areas where damage occurs should be sprayed.</item>
    </string-array>
    <string-array name="CommonCutwormlarva">
        <item>Common Cutworm larva</item>
        <item>Common Cutworm, Grass Cutworm, Vegetable Cutworm, Tobacco Cutworm, Tobacco Caterpillar, Taro Caterpillar</item>
        <item></item>
        <item>Spodoptera litura (Fabricius)</item>
        <item>Egg: Laid in clusters covered with short yellowish brown hairs from the abdominal tips of the female moths. Each egg is pearly white, round, and has a ridged surface; Larva: Brown or green with longitudinal stripes, with black spots ringing the body about one-fourth of the body length behind the head; Adult: Has 15-20mm long grey-brown body, and a wingspan of 30-38mm. The forewings are grey to reddish-brown with a strongly variegated pattern and paler lines along the veins, and the hindwings are greyish-white with grey margins.</item>
        <item>Seedbeds should be established far from large areas of weeds, remove weeds from areas outside of fields, and plow all uncultivated land. In insecticides, sprays are more effective than granules. High dosages are required to kill large armyworm and cutworm larvae. Spraying should be done late in the afternoon before the larvae leave their resting places to climb up the plants. Because damage is normally concentrated in discrete areas of a rice field, only areas where damage occurs should be sprayed.</item>
    </string-array>
    <string-array name="EarcuttingCaterpillaradult">
        <item>Ear-cutting Caterpillar adult</item>
        <item>Ear-cutting caterpillar, Oriental Armyworm, Northern Armyworm</item>
        <item></item>
        <item>Mythimna separata (Walker)</item>
        <item>Egg: Laid in rows along leaves, which fold over and protect the eggs. The pale yellow, spherical eggs can be seen when the leaf blade is unfolded; Larva: Usually light brown or gray green, with a longitudinal dark band midway down the side of the body; Pupa: Shiny, yellowish-brown; Adult: Wing span is 38-48 mm. Forewings are grayish-yellow, with dark-gray or reddish-yellow tint. External wing margin blackened obliquely from top backward, with dark stroke and with a row of dark points. Hindwings are gray, with dark external margin. Antennae are thread-like.</item>
        <item>Weeding, inter-row cultivations, removal of crop residues from fields after harvesting, deep autumn plowing, optimal dates of early sowing, cultivation of resistant varieties, insecticide treatments of crops, release of such entomophages as Trichogramma spp.</item>
    </string-array>
    <string name="about_copyright">Copyright 2017 - Project SARAi</string>
    <string name="about_content">Project SARAi aims to develop a national crop forecasting and monitoring system for first six priority crops: rice, corn, banana, coconut, coffee, cacao. This project is funded by DOST-PCAARRD.</string>
    <string name="sysdev_title">Systems Developers</string>
    <string name="sysdev">Kenneth Lloyd Verastigue\nJuan Carlo Mangaliag\nProf. Roinand Aguila\nProf. Concepcion Khan</string>
</resources>