<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_template">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ImageView
        android:id="@+id/about_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/app_bar"
        android:src="@drawable/about_banner"
        android:scaleType="centerCrop" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="150dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_content"
                android:id="@+id/about_text"
                android:textColor="@color/secondary_text_default_material_light"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_link"
                android:id="@+id/about_seemore"
                android:textColor="@color/secondary_text_default_material_light"
                android:layout_alignParentTop="false"
                android:layout_alignParentStart="true"
                android:layout_marginTop="180dp"
                android:onClick="seeMore"
                android:gravity="center_horizontal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="220dp"
                android:src="@drawable/connect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sysdev_title"
                android:textStyle="bold"
                android:id="@+id/about_sysdev"
                android:textColor="@color/secondary_text_default_material_light"
                android:layout_alignParentTop="false"
                android:layout_marginTop="450dp"
                android:layout_alignParentBottom="false"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sysdev"
                android:id="@+id/about_sysdevs"
                android:textColor="@color/secondary_text_default_material_light"
                android:layout_alignParentTop="false"
                android:layout_marginTop="480dp"
                android:layout_alignParentBottom="false"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_sysdev"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_copyright"
                android:id="@+id/about_copyright"
                android:textColor="@color/secondary_text_default_material_light"
                android:layout_alignParentTop="true"
                android:layout_marginTop="620dp"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal" />

        </RelativeLayout>

    </ScrollView>


</LinearLayout>