<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ph.sarai.pestlibrary.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:id="@+id/pestlibrary_logo"
        android:src="@drawable/pest_library"
        android:scaleType="fitXY"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/pestlibrary_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="arial"
            android:text="@string/title_activity_main"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <Button
            android:id="@+id/browse_pest"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="browsePest"
            android:text="@string/browse_activity_main"
            android:textAllCaps="true"
            android:textColor="#E8F5E9" />

        <Button
            android:id="@+id/browse_diseases"
            android:layout_width="215dp"
            android:layout_height="36dp"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="browseDiseases"
            android:text="@string/browse_activity_main2"
            android:textAllCaps="true"
            android:textColor="#E8F5E9"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
